# DTS-Voice

./: .gitignore  CLAUDE.md  README.md  frontend.md  project-instructions.md  start.sh  status.sh  stop.sh
backend/: .env  pyproject.toml  test_hamza_minimal.py
backend/agent/: audio_preprocessing.py  config.py  direct_join.py  hamza_transcription.py  llm_classifier.py  llm_classifier_worker.py  main.py  model_config.py  production_agent.py  segment_manager.py  transcription.py  vad_handler.py
backend/api/: llm_service.py  server.py  storage.py
backend/data/: model_config.json
backend/prompts/: __init__.py  classification.py  nudges.md  segmentation.md  segmentation.py
data/meetings/: 1146622a-888e-4778-b2c9-69adba55c11c.json  15125933-41e0-4a7b-9c80-aefaa1257ed2.json  1b0f94be-3929-48f9-9cc8-238e69f77d9c.json  58eaf4c2-e55d-49cd-824b-28a25d3e83cf.json  71bed140-407f-4707-91ab-2acbd9058a2f.json  93806b2e-0158-455a-98e3-df693e98372e.json  99c9ba3c-6b7d-490b-9d2e-7c2f50f90429.json  b379b026-43fd-4c78-bd6c-4083a89dac84.json  c93a044a-96c2-49f2-889f-2ebb387698f3.json  d8525fc8-0be3-401a-9bd0-58a82e37256d.json  fc1c2c6a-8ad7-4d5c-bb7c-e6d6c1a1e0ff.json
docs/: ARCHITECTURE.md  SETUP.md
frontend/: .gitignore  package-lock.json  package.json
frontend/app/: globals.css  page.tsx
frontend/components/: ClassificationStatus.tsx  LiveIndicator.tsx  LiveTranscript.tsx  MeetingControls.tsx  ModelToggle.tsx  NoiseBox.tsx  NudgesPanel.tsx  SegmentAnalytics.tsx  SegmentHeader.tsx  SegmentTimeline.tsx  (+1 more)
scripts/: setup.sh  start-backend.sh  start-frontend.sh
(+7 files in other folders)
